adding a change from the feature branch

--- a/algoGit.html
+++ b/algoGit.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hey this is testing git</h1>
     <h2>is this working well?</h2>
-</body>
+    <h3>This line is added from branch. Let's see they they are merged with the Main</h3>
+    </body>
 </html>
