testing. adding one more branch and merge in terminal section

--- a/algoGit.html
+++ b/algoGit.html
@@ -10,5 +10,8 @@
     <h1>Hey this is testing git</h1>
     <h2>is this working well?</h2>
     <h3>This line is added from branch. Let's see they they are merged with the Main</h3>
+
+
+    <h2>Branch testing. This will be merged with command terminal</h2>
     </body>
 </html>
