--- a/algoGit.html
+++ b/algoGit.html
@@ -10,5 +10,8 @@
     <h1>Hey this is testing git</h1>
     <h2>is this working well?</h2>
     <h3>This line is added from branch. Let's see they they are merged with the Main</h3>
+
+
+    <h1>different from main branch. Practice how it will affect the main branch</h1>
     </body>
 </html>
